<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rugby_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/team_title"
                android:text="@string/teamA"
                />

            <TextView
                android:id="@+id/teamAScore"
                style="@style/scrore_style"
                android:text="@string/zero"
                 />

            <Button
                style="@style/button_style"
                android:onClick="tryA"
                android:text="@string/try_name" />

            <Button
                style="@style/button_style"
                android:onClick="penaltyA"
                android:text="@string/penalty_name" />

            <Button
                style="@style/button_style"
                android:onClick="penaltyA"
                android:text="@string/dropped_name" />

            <Button
                style="@style/button_style"
                android:onClick="convA"
                android:text="@string/conv_name" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/team_title"
                android:text="@string/teamB"
                 />

            <TextView
                android:id="@+id/teamBScore"
                style="@style/scrore_style"
                android:text="@string/zero"
                />

            <Button
                style="@style/button_style"
                android:onClick="tryB"
                android:text="@string/try_name" />

            <Button
                style="@style/button_style"
                android:onClick="penaltyB"
                android:text="@string/penalty_name" />

            <Button
                style="@style/button_style"
                android:onClick="penaltyB"
                android:text="@string/dropped_name" />

            <Button
                style="@style/button_style"
                android:onClick="convB"
                android:text="@string/conv_name" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/button_style"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="resetScore"
        android:text="@string/reset_name" />
    </RelativeLayout>
</RelativeLayout>
